--- a/packer-templates/application-server.json
+++ b/packer-templates/application-server.json
@@ -1,6 +1,6 @@
 {
   "variables": {
-      "PACKER_OS_FLAVOUR": "ubuntu",
+      "PPACKER_OS_FLAVOUR": "ubuntu",
       "PACKER_BOX_NAME": "ubuntu-14.04.6-server-amd64",
       "AWS_ACCESS_KEY_ID": "{{env `AWS_ACCESS_KEY_ID`}}",
       "AWS_SECRET_ACCESS_KEY": "{{env `AWS_SECRET_ACCESS_KEY`}}",
